<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_level_picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="left"
    android:padding="10dp">

    <TextView
        android:id="@+id/chose_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/corben_bold"
            android:padding="10dp"
            android:text="@string/level1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:typeface="normal"/>

        <RadioButton
            android:id="@+id/level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/corben_bold"
            android:padding="10dp"
            android:text="@string/level2"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:typeface="normal"/>

        <RadioButton
            android:id="@+id/level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/corben_bold"
            android:padding="10dp"
            android:text="@string/level3"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:typeface="normal"/>

        <RadioButton
            android:id="@+id/level4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/corben_bold"
            android:padding="10dp"
            android:text="@string/level4"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:typeface="normal"/>

        <RadioButton
            android:id="@+id/level5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/corben_bold"
            android:padding="10dp"
            android:text="@string/level5"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:typeface="normal"/>

    </RadioGroup>

    <Button
        android:id="@+id/lets_do_this_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/button"
        android:fontFamily="@font/miriam_libre"
        android:text="@string/lets_do_this"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:typeface="normal"
        android:layout_margin="10dp"/>

</LinearLayout>