<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_guess"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_title"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_artist"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/artist_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_button"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/give_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_up_button"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

</LinearLayout>