<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/dialog_half_correct"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:background="@color/colorPrimary"
              android:padding="25dp">

    <TextView
        android:id="@+id/right_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/right_track"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/encouragement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/encouragement"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_wrong_button"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

</LinearLayout>